fix alignment

--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -166,6 +166,7 @@ form {
 			margin: 0;
 			
 			span {
+				display: inline-block;
 				padding-left: (_size(element-height) * 0.6) + 0.5rem;
 				padding-right: 1rem;
 				position: relative;
